# Open62541_template

./: CMakeLists.txt  README.md
source/: main.cpp
